[tool.poetry]
name = "reflexdir"
version = "0.1.0"
description = ""
authors = ["TAKE Takashi <705098+take-takashi@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "reflexdir", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
reflex = "0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
